Closed Bug 1683248 Opened 5 years ago Closed 5 years ago

sw-wr: Stop to pass WebRenderShaders to software WebRender

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox86 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

(Blocks 2 open bugs)

Details

Crash Data

Attachments

(1 file)

When valid WebRenderShaders is set to software WebRender in NewRenderer::Run(). It causes a panic in shader_source(). It happened with Bug 1683247.

Since optimized shader does not have "// shader: ".

Assignee: nobody → sotaro.ikeda.g
Blocks: sw-wr
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d745c21f3ff2 Stop to pass WebRenderShaders to software WebRender r=nical
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Blocks: 1682753
Crash Signature: [@ swgl::swgl_fns::{{impl}}::shader_source]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: