Bug 1683248 - Stop to pass WebRenderShaders to software WebRender r=nical

Differential Revision: https://phabricator.services.mozilla.com/D100080